# SRM-IC-2023

./: .gitignore  CMakeLists.txt  main.cpp
config/: all-cams-config.yaml  all-lens-config.yaml
config/hero/: camera-init.yaml  coord-init.yaml  file-init.yaml
modules/ballistic-solver/: ballistic-solver.cpp  ballistic-solver.h
modules/camera-base/: README.md  camera-base.cpp  camera-base.h
modules/camera-dh/: camera-dh.cpp  camera-dh.h
modules/camera-hik/: camera-hik.cpp  camera-hik.h
modules/cli-arg-parser/: README.md  cli-arg-parser.cpp  cli-arg-parser.h
modules/common/: README.md  armor.cpp  armor.h  attr-reader.h  buffer.h  exp-decay-lpf.h  factory.h  frame.h  packet.cpp  packet.h  rk4-solver.h  syntactic-sugar.h
modules/controller-base/: controller-base.cpp  controller-base.h
modules/controller-hero/: controller-hero.cpp  controller-hero.h
modules/coordinate/: coordinate.cpp  coordinate.h
modules/recorder/: recorder.h
modules/serial/: serial.cpp  serial.h
modules/simd/: simd.cpp  simd.h
modules/ui-manager/: ui-manager.cpp  ui-manager.h
modules/video-source-base/: video-source-base.cpp  video-source-base.h
modules/video-source-camera/: video-source-camera.cpp  video-source-camera.h
modules/video-source-file/: video-source-file.cpp  video-source-file.h
modules/video-writer/: video-writer.cpp  video-writer.h
